# tradebox

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_core_trading_tables.py  0001_create_instruments_table.py  0002_create_pipeline_runs_table.py  0003_create_data_partitions_table.py  0004_create_backtest_runs_table.py  0005_create_detected_setups_table.py  0006_create_simulated_trades_table.py
backend/src/app/: __init__.py  config.py  main.py
backend/src/app/api/: __init__.py
backend/src/app/api/routes/: __init__.py  backtest_runs.py  data_partitions.py
backend/src/app/db/: base.py  session.py
backend/src/app/db/models/: __init__.py  backtest_run.py  data_partition.py  detected_setup.py  (+3 more)
backend/src/app/schemas/: __init__.py  backtest_run.py  data_partition.py
backend/src/app/services/: __init__.py  backtest_runs.py  data_partitions.py
backend/tests/: test_alembic.py  test_app.py  test_backtest_runs_api.py  test_config.py  test_data_partitions_api.py  test_db.py  test_models.py  test_shared_core_import.py
pipelines/: pyproject.toml
pipelines/src/pipelines/: __init__.py  definitions.py
pipelines/src/pipelines/assets/: __init__.py  market_data.py  spy_raw_to_clean.py
pipelines/src/pipelines/jobs/: __init__.py
pipelines/src/pipelines/resources/: __init__.py
pipelines/src/pipelines/schedules/: __init__.py
pipelines/src/pipelines/sensors/: __init__.py
pipelines/tests/: test_definitions.py  test_import_boundaries.py  test_market_data_assets.py  test_spy_raw_to_clean_asset.py
(+11 files in other folders)
